[package]
name = "stateset-realtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "WebSocket support for StateSet SDK"

[dependencies]
stateset-core = { path = "../stateset-core" }
stateset-models = { path = "../stateset-models" }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
tokio = { workspace = true }
url = { workspace = true }
log = { workspace = true }

[dev-dependencies] 